# KeyToMusicRustTauri

./: .gitignore  AGENTS.md  CLAUDE.md  KeyToMusic_Technical_Specification.md  PHASE0_COMPLETE.md  README.md  TASKS.md  TASKS_ARCHIVED_DO_NOT_USE.md  index.html  package-lock.json  package.json  slot.py  tailwind.config.js  vite.config.ts
Tasks/: MULTI_SELECTION.md  PHASE_0.md  PHASE_1.md  PHASE_2.md  PHASE_4_5.md  PHASE_5.md  PHASE_6.md  PHASE_7_5.md  PHASE_8.md  PHASE_9.md  README.md
Tasks/done/: MULTI_SELECTION.md
Tasks/ideas/: dismissed.md  good.md  maybe.md
Tasks/post-dev/: BUILD_RELEASE.md  TESTS_VALIDATION.md
Tasks/todo/: DISCOVERY_LOCAL_SOUNDS.md  DISCOVERY_PREVIEW_VOLUME.md  DISCOVERY_PROFILE_SWITCH_PRELOAD.md  KEYBOARD_SHORTCUTS_MODAL.md  MOMENTUM_SUGGESTION_FIX.md  POLISH_OPTIMIZATIONS.md  YOUTUBE_SEARCH_PREVIEW.md  _TEMPLATE.md  ui-redesign-complete.md  ui-redesign-warm.md  ui-ux-improvements.md
Tasks/updates/: CODE_REVIEW_FIXES.md  DISCOVERY_DISLIKE_SYSTEM.md  SMART_DISCOVERY.md  SMART_DISCOVERY_01_YouTube_Search.md  SMART_DISCOVERY_02_Playlist_Import.md  SMART_DISCOVERY_03_Waveform_RMS.md  SMART_DISCOVERY_04_Auto_Momentum.md  SMART_DISCOVERY_05_YouTube_Mix_Discovery.md
WebExtension/: sushiscanRef.mhtml
WebExtension/manga-mood/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js
docs/: DOCUMENTATION_AUDIT.md  KeyToMusic_Technical_Specification.md  MANGA_MOOD_CURRENT_ARCHITECTURE.md  PHASE_8_COMBINED_SHORTCUTS_PLAN.md
docs/archive/: PHASE0_COMPLETE.md  PHASE_8_COMBINED_SHORTCUTS_PLAN.md  TASKS_ARCHIVED_DO_NOT_USE.md
manga-mood-ai/: FINDINGS.md  IMPLEMENTATION.md  PLAN.md  RESULTS.md  debug_qwen2b.py  debug_thinking.py  debug_vram.py  requirements.txt  test_context.py  test_models.py  test_optimizations.py
manga-mood-ai/plans/: IMPLEMENTATION.md  PIPELINE_V2.md  PLAN.md  PLAN_CONTEXT_DESCRIPTIONS.md  PLAN_GPU_BACKENDS_RUNTIME.md  PLAN_MOOD_DIMENSIONAL.md  PLAN_RUNTIME_SIZING_NGL_SUPPORT.md  PLAN_V7_BIDIRECTIONAL.md  PLAN_V8_ASYMMETRIC.md
manga-mood-ai/research/: FINDINGS.md  RESEARCH_SYNTHESIS.md  RESULTS.md  RechercheAmeliorationIA.md
manga-mood-ai/results/: benchmark.json  compare_bl1_page_by_page_baseline_vs_t4b_wide5_selective.md  context_benchmark.json  optimizations.json  pass1_dim_bluelock_llama-server_qwen3-vl-4b-thinking.json  pass1_dim_bluelock_llama-server_qwen3.5_4b.json  pass4_features_llama-server_qwen3.5_4b.json  pass5_hybrid_llama-server_qwen3.5_4b.json  pass_v11_summaries_llama-server_qwen3.5_4b.json  pass_v5_descriptions_llama-server_qwen3.5_4b.json  pass_v6_bluelock_llama-server_qwen3.5_4b.json  pass_v8_bluelock_llama-server_qwen3.5_4b.json  qwen35_benchmark.json  realtest_suite_bl_1.json  realtest_suite_bl_1.md  realtest_suite_bl_1_first1.json  realtest_suite_bl_1_first3.json  realtest_suite_bl_1_first3.md  realtest_suite_q35_4b_viterbi.json  realtest_suite_q3vl_2b_viterbi.json  realtest_suite_t4b_all_png.json  realtest_suite_t4b_ensemble_viterbi.json  realtest_suite_t4b_focus_grammar_short.json  realtest_suite_t4b_focus_short.json  realtest_suite_t4b_hist_live.json  realtest_suite_t4b_narrative_focus.json  realtest_suite_t4b_ocr.json  realtest_suite_t4b_official.json  realtest_suite_t4b_wide5_selective.json  realtest_suite_t4b_wide5_sequence_viterbi.json  realtest_v12_thinking4b.json
resources/: LegacySave.json  LegacySaveExemple.json
resources/icons/: README.md
resources/sounds/: README.md
scripts/: install-realtest-benchmark-deps.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  main.rs  state.rs  types.rs
src-tauri/src/audio/: analysis.rs  buffer.rs  crossfade.rs  engine.rs  mod.rs  symphonia_source.rs  track.rs
src-tauri/src/discovery/: cache.rs  engine.rs  mix_fetcher.rs  mod.rs
src-tauri/src/import_export/: export.rs  import.rs  mod.rs
src-tauri/src/keys/: chord.rs  detector.rs  linux_listener.rs  macos_listener.rs  mapping.rs  mod.rs  windows_listener.rs
src-tauri/src/mood/: cache.rs  chapter_pipeline.rs  director.rs  director_realtest_suite.rs  inference.rs  llama_manager.rs  mod.rs  server.rs  winner.rs
src-tauri/src/storage/: config.rs  mod.rs  profile.rs
src-tauri/src/youtube/: cache.rs  downloader.rs  ffmpeg_manager.rs  mod.rs  search.rs  yt_dlp_manager.rs
src/components/: ConfirmDialog.tsx
src/hooks/: useAudioEvents.ts  useDiscovery.ts  useDiscoveryPredownload.ts  useKeyDetection.ts  useMoodPlayback.ts  useTextInputFocus.ts  useTrackPosition.ts  useUndoRedo.ts  useWheelSlider.ts
src/stores/: audioStore.ts  confirmStore.ts  discoveryStore.ts  errorStore.ts  exportStore.ts  (+7 more)
(+122 files in other folders)
