[package]
name = "keytomusic"
version = "1.0.0"
description = "Application de soundboard pour la lecture de mangas"
authors = ["KeyToMusic Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.19"
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "pcm", "aac", "isomp4"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
sanitize-filename = "0.5"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"

[target."cfg(not(target_os = \"macos\"))".dependencies]
rdev = "0.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
