[package]
name = "keytomusic"
version = "1.0.0"
description = "Application de soundboard pour la lecture de mangas"
authors = ["KeyToMusic Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.19"
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "pcm", "aac", "isomp4"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "io-util", "time", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
rfd = "0.15"
futures = "0.3"
regex = "1"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"

[target."cfg(not(any(target_os = \"macos\", target_os = \"windows\")))".dependencies]
# Use RustDesk's fork of rdev for Linux
rdev = { git = "https://github.com/fufesou/rdev", branch = "master" }

[target."cfg(target_os = \"windows\")".dependencies]
# Use Windows API directly for keyboard input (Raw Input API for global key capture)
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Graphics_Gdi"
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
